@@ -1,1 +1,7 @@
 SUBDIRS = src bin cfg spec test CPPTest doc
+
+
+# Install pkgconf definition
+
+pkgconfdir=$(libdir)/pkgconfig
+pkgconf_DATA = quickfix.pc
