@@ -1,0 +1,11 @@
+prefix=@prefix@
+exec_prefix=@prefix@
+libdir=@prefix@/lib
+includedir=@prefix@/include
+
+Name: QuickFIX
+Description: FIX Engine
+Version: @VERSION@
+Requires: libxml
+Libs: -L${libdir} -lquickfix
+Cflags: -I${includedir}
